# otus-cpp

./: CMakeLists.txt  test_version_gtest.cpp
